Setting type="module"

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reminders</title>
     <script src="./libraries/handlebars.min.js" defer></script>
-    <script src="./scripts/utils/noteService.js" defer></script>
-    <script src="./scripts/controllers/userControllers.js" defer></script>
-    <script src="./scripts/model/routes.js" defer></script>
-    <script src="./scripts/model/store.js" defer></script>
-    <script src="./scripts/utils/classes.js" defer></script>
-    <script src="./scripts/utils/functions.js" defer></script>
+    <script type="module" src="./scripts/utils/noteService.js" defer></script
+    <script type="module" src="./scripts/controllers/userControllers.js" defer></script>
+    <script type="module" src="./scripts/model/routes.js" defer></script>
+    <script type="module" src="./scripts/model/store.js" defer></script>
+    <script type="module" src="./scripts/utils/classes.js" defer></script>
+    <script type="module" src="./scripts/utils/functions.js" defer></script>
     <link rel="stylesheet" href="./styles/main.css"/>
 </head>
 <body>
@@ -40,6 +40,7 @@
         <div class="list-group-header">
             <input type="checkbox" id="group-checkbox-{{id}}">
             <span class="editable-label group-title text-font text-title" id="group-title-{{id}}" contenteditable="false">Group Title</span>
+            <button data-action="delete-group">Delete</button>
         </div>
         <button data-action="create-reminder">New Reminder</button>
         <div class="reminders-container" id="reminders-container-{{id}}"></div>
