Setting type="module" fixed

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reminders</title>
     <script src="./libraries/handlebars.min.js" defer></script>
-    <script type="module" src="./scripts/utils/noteService.js" defer></script
+    <script type="module" src="./scripts/utils/noteService.js" defer></script>
     <script type="module" src="./scripts/controllers/userControllers.js" defer></script>
     <script type="module" src="./scripts/model/routes.js" defer></script>
     <script type="module" src="./scripts/model/store.js" defer></script>
