Ability to create inline reminders restored.

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -20,7 +20,7 @@
         <div class="flex-container">
             <div class="flex-container-fixed">
                 <div class="toolbar">
-                    <button class="color-main" id="toolbar-new-reminder">New</button>
+                    <button class="color-main" id="toolbar-new-reminder">New Group</button>
                     <div class="spacer-gap"></div>
                     <button class="color-main" id="show-important">Important</button>
                     <div class="spacer-elements"></div>
