Fixed unresponsive behaviour but lost dynamic date button again.

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -24,7 +24,7 @@
                     <div class="spacer-gap"></div>
                     <button class="color-main" id="show-important">Important</button>
                     <div class="spacer-elements"></div>
-                    <button class="color-main button-margin-left" id="sort-by-date">Date</button>
+                    <button class="color-main inactive" id="sort-by-date">Date</button>
                     <div class="spacer-fill"></div>
                     <button class="button-margin-left color-caution inactive" id="clear-reminders">Clear</button>
                 </div>
