Text input saving added.

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -39,7 +39,7 @@
     <div class="list-group" data-id="{{id}}">
         <div class="list-group-header">
             <input type="checkbox" id="group-checkbox-{{id}}">
-            <span class="editable-label group-title text-font text-title" id="group-title-{{id}}" contenteditable="false">Group Title</span>
+            <span class="editable-label group-title text-font text-title" id="group-title-{{id}}" contenteditable="false">{{title}}</span>
         </div>
         <button data-action="create-reminder">New Reminder</button>
         <div class="reminders-container" id="reminders-container-{{id}}"></div>
