Fixed issue where new reminders were created in wrong list-group.

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -41,10 +41,11 @@
             <input type="checkbox" id="group-checkbox-{{id}}">
             <span class="editable-label group-title text-font text-title" id="group-title-{{id}}" contenteditable="false">{{title}}</span>
         </div>
-        <button data-action="create-reminder">New Reminder</button>
+        <button data-action="create-reminder" data-group-id="{{id}}">New Reminder</button>
         <div class="reminders-container" id="reminders-container-{{id}}"></div>
     </div>
 </script>
+
 
 <script id="reminder-template" type="text/x-handlebars-template">
     <div class="checkbox-container" data-id="{{id}}">
