--- a/source/public/index.html
+++ b/source/public/index.html
@@ -40,7 +40,7 @@
     <div class="list-group" data-id="{{id}}">
         <div class="list-group-header">
             <input type="checkbox" id="group-checkbox-{{id}}">
-            <span class="editable-label group-title text-font text-title inactive-label" id="group-title-{{id}}" contenteditable="false">{{title}}</span>
+            <span class="editable-label group-title text-font text-title {{#unless userInputted}}inactive-label{{/unless}}" id="group-title-{{id}}" contenteditable="false">{{title}}</span>
         </div>
         <button data-action="create-reminder" data-group-id="{{id}}">New Reminder</button>
         <div class="reminders-container" id="reminders-container-{{id}}"></div>
@@ -50,7 +50,7 @@
 <script id="reminder-template" type="text/x-handlebars-template">
     <div class="checkbox-container" data-id="{{id}}">
         <input type="checkbox" id="checkbox-{{id}}">
-        <span class="editable-label text-font text-list inactive-label" id="label-{{id}}" contenteditable="false">{{text}}</span>
+        <span class="editable-label text-font text-list {{#unless userInputted}}inactive-label{{/unless}}" id="label-{{id}}" contenteditable="false">{{text}}</span>
         <input class="date-input" type="date" id="date-{{id}}">
         <button id="button-{{id}}" data-action="toggle-important">!</button>
         <br/>
