--- a/source/public/index.html
+++ b/source/public/index.html
@@ -23,7 +23,7 @@
                 <div class="toolbar">
                     <button class="color-main" id="toolbar-new-reminder">New Group</button>
                     <div class="spacer-gap"></div>
-                    <button class="color-main" id="show-important">Important</button>
+                    <button class="color-main inactive" id="show-important">Important</button>
                     <div class="spacer-elements"></div>
                     <button class="color-main inactive" id="sort-by-date">Date</button>
                     <div class="spacer-fill"></div>
