"Important" button now has correct color text label to indicate filtering state.

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -23,9 +23,9 @@
                 <div class="toolbar">
                     <button class="color-main" id="toolbar-new-reminder">New Group</button>
                     <div class="spacer-gap"></div>
-                    <button class="color-main inactive" id="show-important">Important</button>
+                    <button class="color-main inactive" id="show-important"><span class="toolbar-button-text">Important</span></button>
                     <div class="spacer-elements"></div>
-                    <button class="color-main inactive" id="sort-by-date">Date</button>
+                    <button class="color-main inactive" id="sort-by-date"><span class="toolbar-button-text">Date</span></button>
                     <div class="spacer-fill"></div>
                     <button class="button-margin-left color-caution inactive" id="clear-reminders">Clear</button>
                 </div>
