--- a/source/public/index.html
+++ b/source/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reminders</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./libraries/handlebars.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
     <script type="module" src="./scripts/utils/noteService.js" defer></script>
     <script type="module" src="./scripts/controllers/userControllers.js" defer></script>
     <script type="module" src="./scripts/model/routes.js" defer></script>
