--- a/source/public/index.html
+++ b/source/public/index.html
@@ -54,10 +54,11 @@
         <input type="checkbox" id="checkbox-{{id}}">
         <span class="editable-label text-font text-list {{#unless userInputted}}inactive-label{{/unless}}" id="label-{{id}}" contenteditable="false">{{text}}</span>
         <input class="date-input" type="date" id="date-{{id}}">
-        <button id="button-{{id}}" data-action="toggle-important">!</button>
+        <button id="button-{{id}}" data-action="toggle-important" class="{{#if important}}important{{/if}}">!</button>
         <br/>
     </div>
 </script>
+
 
 </body>
 </html>
