--- a/source/public/index.html
+++ b/source/public/index.html
@@ -53,10 +53,12 @@
     <div class="checkbox-container" data-id="{{id}}">
         <input type="checkbox" id="checkbox-{{id}}">
         <span class="editable-label text-font text-list {{#unless userInputted}}inactive-label{{/unless}}" id="label-{{id}}" contenteditable="false">{{text}}</span>
+        <div class="spacer-fill"></div>
         <input class="date-input" type="date" id="date-{{id}}">
         <button id="button-{{id}}" data-action="toggle-important" class="{{#if important}}important{{/if}}">!</button>
     </div>
 </script>
+
 
 
 
