Cleaned up / restored / fixed.

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -25,9 +25,11 @@
                 <div class="toolbar">
                     <button class="color-main" id="toolbar-new-reminder">+</button>
                     <div class="spacer-gap"></div>
-                    <button class="color-main inactive" id="show-important"><span class="toolbar-button-text">!!</span></button>
+                    <button class="color-main inactive" id="show-important"><span class="toolbar-button-text">!!</span>
+                    </button>
                     <div class="spacer-elements"></div>
-                    <button class="color-main inactive" id="sort-by-date"><span class="toolbar-button-text">d</span></button>
+                    <button class="color-main inactive" id="sort-by-date"><span class="toolbar-button-text">d</span>
+                    </button>
                     <div class="spacer-fill"></div>
                     <button class="button-margin-left color-caution inactive" id="clear-reminders">x</button>
                 </div>
@@ -42,7 +44,9 @@
     <div class="list-group" data-id="{{id}}">
         <div class="list-group-header">
             <input type="checkbox" id="group-checkbox-{{id}}">
-            <span class="editable-label group-title text-font text-title {{#unless userInputted}}inactive-label{{/unless}}" id="group-title-{{id}}" contenteditable="false">{{title}}</span>
+            <span class="editable-label group-title text-font text-title {{#unless
+                    userInputted}}inactive-label{{/unless}}" id="group-title-{{id}}"
+                  contenteditable="false">{{title}}</span>
         </div>
         <button data-action="create-reminder" data-group-id="{{id}}">+</button>
         <div class="reminders-container" id="reminders-container-{{id}}"></div>
@@ -52,12 +56,14 @@
 <script id="reminder-template" type="text/x-handlebars-template">
     <div class="checkbox-container" data-id="{{id}}">
         <input type="checkbox" id="checkbox-{{id}}">
-        <span class="editable-label text-font text-list {{#unless userInputted}}inactive-label{{/unless}}" id="label-{{id}}" contenteditable="false">{{text}}</span>
+        <span class="editable-label text-font text-list {{#unless userInputted}}inactive-label{{/unless}}"
+              id="label-{{id}}" contenteditable="false">{{text}}</span>
         <div class="spacer-fill"></div>
-        <input class="date-input" type="date" id="date-{{id}}">
         <button id="button-{{id}}" data-action="toggle-important" class="{{#if important}}important{{/if}}">!</button>
+        <input class="date-input" type="date" id="date-{{id}}">
     </div>
 </script>
+
 
 </body>
 </html>
