📁refactored file structure.

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Reminders</title>
-    <script defer src="./libraries/handlebars.min.js"></script>
+    <script defer src="../libraries/handlebars.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
-    <script defer src="./scripts/utils/noteService.js" type="module"></script>
-    <script defer src="./scripts/controllers/userControllers.js" type="module"></script>
-    <script defer src="./scripts/model/routes.js" type="module"></script>
-    <script defer src="./scripts/model/store.js" type="module"></script>
-    <script defer src="./scripts/utils/classes.js" type="module"></script>
-    <script defer src="./scripts/utils/functions.js" type="module"></script>
-    <link href="./styles/main.css" rel="stylesheet"/>
+    <script defer src="../scripts/utils/noteService.js" type="module"></script>
+    <script defer src="../../node_modules/controller/userControllers.js" type="module"></script>
+    <script defer src="../scripts/model/routes.js" type="module"></script>
+    <script defer src="../scripts/model/store.js" type="module"></script>
+    <script defer src="../../to-delete/classes.js" type="module"></script>
+    <script defer src="../../to-delete/functions.js" type="module"></script>
+    <link href="../css/main.css" rel="stylesheet"/>
 </head>
 <body>
 <header></header>
