--- a/public/html/index.html
+++ b/public/html/index.html
@@ -27,30 +27,19 @@
             <label for="group-checkbox" class="list-group-header">New Reminder</label>
             <br>
             <button id="group-add-reminder">+</button>
-
         </h2>
-
-
             <ul>
                 <li>
-                    <input type="checkbox" id="group-checkbox">
-
-
+                    <input type="checkbox" id="item-checkbox">
+                    <label for="item-checkbox">New Reminder</label>
+                    <button id="important">!</button>
+                    <input type="date">
                 </li>
             </ul>
         </section>
     </main>
 </div>
-
-<script id="reminder-template" type="text/x-handlebars-template">
-    <div class="checkbox-container" data-id="{{id}}">
-        <input type="checkbox" id="checkbox-{{id}}">
-        <span class="editable-label text-font text-list {{#unless userInputted}}inactive-label{{/unless}}"
-              id="label-{{id}}" contenteditable="false">{{text}}</span>
-        <div class="spacer-fill"></div>
-        <button id="button-{{id}}" data-action="toggle-important" class="{{#if important}}important{{/if}}">!</button>
-        <input class="date-input" type="date" id="date-{{id}}">
-    </div>
+<script>
 </script>
 
 
